Mother's day update

--- a/tt.conf
+++ b/tt.conf
@@ -1,3 +1,14 @@
 src = tt
 dest = htdocs
 lib = ttlib
+lib = /home/tubert/share/tt2/templates
+verbose 
+recurse
+ignore = \b(CVS|RCS)\b
+ignore = ^#
+copy = \.png$ 
+copy = \.gif$ 
+copy = \.pdf$ 
+copy = \.ico$ 
+copy = \.jpg$ 
+copy = \.jpeg$ 
